# SimpleSynth

./: .clang-format  .gitignore  CMakeLists.txt  README.md  doit.sh
plugin/: CMakeLists.txt
plugin/include/SimpleSynth/: PluginEditor.h  PluginProcessor.h  SynthVoice.h
plugin/source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SynthSound.h  SynthVoice.cpp  SynthVoice.h
plugin/source/attachments/: RadioButtonAttachment.cpp  RadioButtonAttachment.h
plugin/source/data/: EnvelopeData.cpp  FilterData.cpp  FilterData.h  GainData.cpp  GainData.h  LFOData.cpp  LFOData.h  OscillatorData.cpp  OscillatorData.h  ReverbData.cpp  ReverbData.h  envelopeData.cpp  envelopeData.h
plugin/source/ui/: EnvelopeComponent.h  FilterComponent.cpp  FilterComponent.h  FilterPickerComponent.cpp  FilterPickerComponent.h  GainComponent.cpp  GainComponent.h  IconSlider.cpp  IconSlider.h  IconSliderComponent.cpp  IconSliderComponent.h  LFOComponent.cpp  LFOComponent.h  LabeledSliderComponent.cpp  LabeledSliderComponent.h  OscillatorComponent.cpp  OscillatorComponent.h  OscillatorPickerComponent.cpp  RadioButtonComponent.cpp  RadioButtonComponent.h  ReverbComponent.cpp  ReverbComponent.h  envelopeComponent.cpp  envelopeComponent.h  labeledSlider.cpp  labeledSlider.h  oscillatorPickerComponent.cpp  oscillatorPickerComponent.h
plugin/source/utils/: FilterType.h  OscillatorType.h
test/: CMakeLists.txt
test/source/: AudioProcessorTest.cpp
test/source/data/: EnvelopeData.cpp  FilterData.cpp  GainData.cpp  LFOData.cpp  OscillatorData.cpp  ReverbData.cpp
test/source/utils/: FilterType.cpp  OscillatorType.cpp
